src/test/resources/mutation/error/mutationTypeWithoutRecord/schema.graphqls
type EndreResponse {
  id: ID!
}

type Mutation {
  endrePerson(id: ID!): EndreResponse! @mutationType(typeName: UPDATE)
}
